--- a/viewtimeline.html
+++ b/viewtimeline.html
@@ -531,17 +531,16 @@
                 const today = new Date().toLocaleDateString('en-GB');
 
                 const values = [[
-                    jobData.jobNumber,
-                    jobData.postcode,
-                    jobData.startDate || '',
-                    jobData.finishDate || '',
-                    today,
-                    jobData.delays,
-                    '', '', ''
+                    today,           // A - Today's date
+                    jobData.jobNumber, // B - Job Number
+                    jobData.postcode,  // C - Postcode
+                    '',              // D - empty
+                    '',              // E - empty
+                    jobData.delays   // F - Delays
                 ]];
 
                 const writeRes = await fetch(
-                    `https://sheets.googleapis.com/v4/spreadsheets/${spreadsheetId}/values/${encodedSheet}!A${nextRow}:I${nextRow}?valueInputOption=USER_ENTERED`,
+                    `https://sheets.googleapis.com/v4/spreadsheets/${spreadsheetId}/values/${encodedSheet}!A${nextRow}:F${nextRow}?valueInputOption=USER_ENTERED`,
                     {
                         method: 'PUT',
                         headers: {
